--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -7,7 +7,7 @@ set -g default-terminal "tmux-256color"
 set -g prefix2 C-a                        # GNU-Screen compoatible prefix
 bind C-a send-prefix -2
 
-set -g history-limit 5000           
+set -g history-limit 5000
 
 set -g mouse on
 set-window-option -g mode-keys vi
@@ -155,6 +155,9 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
