--- a/home/dot_config/gh-dash/config.yml
+++ b/home/dot_config/gh-dash/config.yml
@@ -1,17 +1,26 @@
+# yaml-language-server: $schema=https://dlvhdr.github.io/gh-dash/configuration/gh-dash/schema.json
 prSections:
-  - title: My Pull Requests
+  - title: Mine
     filters: is:open author:@me
-    limit: 10
-  - title: Needs My Review
+    layout:
+      author:
+        hidden: true
+  - title: Review
     filters: is:open review-requested:@me
-    limit: 10
+    layout:
+      repo:
+        width: 6
+  - title: Commented
+    filters: commenter:@me
   - title: Involved
     filters: is:open involves:@me -author:@me
     limit: 10
 
 issuesSections:
-  - title: My Issues
+  - title: Creator
     filters: is:open author:@me
+  - title: Commenter
+    filters: is:open commenter:@me
   - title: Assigned
     filters: is:open assignee:@me
   - title: Involved
@@ -20,67 +29,44 @@ issuesSections:
 defaults:
   preview:
     open: true
-    width: 84
+    width: 70
   prsLimit: 20
   issuesLimit: 20
   view: prs
   layout:
     prs:
-      updatedAt:
-        width: 7
-      repo:
-        width: 15
-      author:
-        width: 15
-      assignees:
-        width: 20
-        hidden: true
-      base:
-        width: 15
-        hidden: true
-      lines:
-        width: 16
-    issues:
-      updatedAt:
-        width: 7
-      repo:
-        width: 15
-      creator:
+      repoName:
+        grow: true
         width: 10
-      assignees:
-        width: 20
-        hidden: true
-  refetchIntervalMinutes: 30
+        hidden: false
+      base:
+        hidden: false
+  refetchIntervalMinutes: 10
 
 keybindings:
   universal:
     - key: g
-      name: lazygit
       command: >
         cd {{.RepoPath}} && lazygit
   prs:
     - key: O
       builtin: checkout
-    - key: m
-      command: gh pr merge --admin --repo {{.RepoName}} {{.PrNumber}
     - key: C
-      name: code review
       command: >
         tmux new-window -c {{.RepoPath}} '
         nvim -c ":silent Octo pr edit {{.PrNumber}}"
         '
+    - key: b
+      command: cd {{.RepoPath}} && gh pr view {{.PrNumber}} --json statusCheckRollup | command jq -rcj '.statusCheckRollup.[] | select(.context == "buildkite/mono") | .targetUrl' | xargs open
     - key: a
-      name: lazygit add
       command: >
         cd {{.RepoPath}} && git add -A && lazygit
     - key: v
-      name: approve
       command: >
         gh pr review --repo {{.RepoName}} --approve --body "$(gum input --prompt='Approval Comment: ')" {{.PrNumber}}
 
 repoPaths:
-  # TODO: Update paths
-  # ncr-digital-banking/*: ~/Documents/60\ Professional/61\ Projects/61.00\ Repositories/*
+  ncr-digital-banking/*: ~/Code/DI
 
 theme:
   colors:
@@ -113,8 +99,8 @@ theme:
     #   secondary: "#bcc0cc"
     #   faint: "#ccd0da"
   ui:
+    sectionsShowCount: true
     table:
-      showSeparator: true
-
+      compact: false
 pager:
   diff: delta
