--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -2,7 +2,12 @@
 # general
 ################################################################################
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
+
+# make colors inside tmux look the same as outside of tmux
+# see https://github.com/tmux/tmux/issues/696
+# see https://stackoverflow.com/a/41786092
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix2 C-a                        # GNU-Screen compoatible prefix
 bind C-a send-prefix -2
@@ -146,8 +151,8 @@ bind Tab last-window                                    # move to last active wi
 ################################################################################
 
 set -g @plugin 'catppuccin/tmux#v2'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-online-status'
