Update .chezmoidata/packages.yaml Update .config/nvim/lazyvim.json Update .tmux.conf Update .zshrc

--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -151,8 +151,8 @@ bind Tab last-window                                    # move to last active wi
 ################################################################################
 
 set -g @plugin 'catppuccin/tmux#v2'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-online-status'
