--- a/home/dot_config/tmux/tmux.conf
+++ b/home/dot_config/tmux/tmux.conf
@@ -9,7 +9,8 @@ set -g default-terminal "xterm-256color"
 # see https://stackoverflow.com/a/41786092
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g prefix2 C-a                        # GNU-Screen compoatible prefix
+unbind C-b
+set -g prefix2 C-a                     # GNU-Screen compoatible prefix
 bind C-a send-prefix -2
 
 set -g history-limit 5000
@@ -23,7 +24,6 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 ################################################################################
 # Appearance
 ################################################################################
-
 # Configure Catppuccin
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_status_background "none"
@@ -38,33 +38,35 @@ set -g @offline_icon "nok"
 # status left look and feel
 set -g status-left-length 100
 set -g status-left ""
-set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=default,bold]   #S },#{#[bg=default,fg=#{@thm_red},bold]   #S }}"
+set -ga status-left "#[bg=default,fg=#{@thm_overlay0},none,bold]│"
+set -ga status-left "#[bg=default,fg=#{@thm_green},bold]   #{pane_current_command} "
+set -ga status-left "#[bg=default,fg=#{@thm_overlay0},none,bold]│"
+set -ga status-left "#[bg=default,fg=#{@thm_blue},bold]   #{=/-10/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=default,fg=#{@thm_overlay0},none,bold]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=default,fg=#{@thm_yellow},bold]#{?window_zoomed_flag,   zoom ,}"
+
 
 # status right look and feel
 set -g status-right-length 100
 set -g status-right ""
-set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=default,fg=#{@thm_red},bold] 󱐋#{?#{e|>=:20,#{battery_percentage}},#{#[bg=#{@thm_red},fg=default,bold]},#{#[bg=default,fg=#{@thm_red},bold]}} #{battery_percentage} "
 set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
-set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+set -ga status-right "#[bg=default,fg=#{@thm_green},bold] 󰍛 #{cpu_percentage} "
+# set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
 set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
 set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
 
 # Configure Tmux
 set -g status-position top
-set -g status-style "bg=#{@thm_bg}"
+set -g status-style "bg=default"
 set -g status-justify "absolute-centre"
 
 # pane border look and feel
 setw -g pane-border-status top
 setw -g pane-border-format ""
-setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
-setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+setw -g pane-border-style "bg=default,fg=#{@thm_overlay0}"
+setw -g pane-active-border-style "bg=default,fg=#{@thm_red}"
 setw -g pane-border-lines single
 
 # window look and feel
@@ -115,10 +117,13 @@ bind C-f command-prompt -p find-session 'switch-client -t %%'
 # session navigation
 bind BTab switch-client -l  # move to last session
 
-# split current window horizontally
+# Split panes
 bind - split-window -v
-# split current window vertically
 bind | split-window -h
+
+# Split panes with current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # pane navigation
 bind -r h select-pane -L  # move left
@@ -145,24 +150,22 @@ bind -r C-S-H swap-window -t -1 \; select-window -t -1  # swap current window wi
 bind -r C-S-L swap-window -t +1 \; select-window -t +1  # swap current window with the next one
 bind Tab last-window                                    # move to last active window
 
-
 ################################################################################
-# TPM
+# Plugins
 ################################################################################
-
 set -g @plugin 'catppuccin/tmux#v2'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-battery'
-
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
+# Run automatically
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+################################################################################
