Update .chezmoidata/packages.yaml Remove .config/bottom/bottom.toml Add .config/btop/btop.conf Add .config/btop/themes/catppuccin_mocha.theme

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -74,8 +74,9 @@ packages:
         - name: ack
         - name: asciinema
         - name: aspell
-        - name: bottom
         - name: brew-gem
+        - name: btop
+        - name: bottom
         - name: ccat
         - name: cheat
         - name: cloc
@@ -97,7 +98,6 @@ packages:
         - name: grc
         - name: gum
         - name: highlight
-        - name: htop
         - name: imagemagick
         - name: ipcalc
         - name: jandedobbeleer/oh-my-posh/oh-my-posh
