Update .chezmoidata/packages.yaml Remove .config/i3/catppuccin-mocha Remove .config/i3/colors Update .config/i3/config Remove .config/i3/config.old Add .config/polybar/config.ini Add .config/polybar/launch.sh Add .config/polybar/mocha.ini Remove .config/waybar/config Remove .config/waybar/mocha.css Remove .config/waybar/style.css Update .zsh_aliases

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -281,21 +281,30 @@ packages:
         - dejan/lazygit
         - wezfurlong/wezterm-nightly
       packages:
+        - bat
+        - chromium
+        - conky
         - copr-cli
         - direnv
         - fastfetch
         - fzf
+        - gh
+        - git-delta
+        - jq
         - lazygit
+        - ncdu
         - neovim
+        - polybar
         - rbenv
+        - rofi
+        - tldr
         - tmux
+        - trash
+        - wezterm
         - zoxide
         - zsh
-        - git-delta
-        - gh
-        # - 1password-cli
-        - wezterm
-        - conky
+        - gnome-keyring
+        - gnome-keyring-pam
   windows:
     winget:
       - JanDeDobbeleer.OhMyPosh
