--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -289,6 +289,8 @@ packages:
         - zsh
     fedora:
       cargo:
+        - cargo-upgrades
+        - cargo-update
         - eza
       copr:
         - dejan/lazygit
