moves parallels to application folder

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -260,6 +260,8 @@ packages:
           excludeEphemeral: true
         - name: parallels
           excludeEphemeral: true
+          args:
+            appdir: "/Applications"
         # - name: private-internet-access
         #   excludeEphemeral: true
         - name: silentknight
