--- a/home/dot_config/i3/config
+++ b/home/dot_config/i3/config
@@ -219,5 +219,6 @@ client.background        $base
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id gnome-keyring-daemon --start --components=ssh,secrets,pkcs11,gpg
+exec --no-startup-id "i3-msg 'workspace 9; exec 1password'"
 
 
